# rust-synth-emulation

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
.github/workflows/: rust-wasm-pack.yml
docs/: .htaccess  0.bootstrap.js  1.bootstrap.js  bootstrap.js  index.html  iwasm.js  src_js_index_js.bootstrap.js  style.css  synth-nogc.wasm  synth.wasm
docs/vgm/: vgmsample.gwi
src/: lib.rs  main.rs
src/sn76489/: mod.rs
src/ym3438/: mod.rs
synth-emulation/: Cargo.toml
synth-emulation/src/sn76489/: mod.rs
synth-emulation/src/vgmplay/: mod.rs
synth-emulation/src/ym3438/: mod.rs
synth-emulator/: CMakeLists.txt  Cargo.toml
synth-emulator/src/c/: pwm.c  pwm.h  sn76489.c  sn76489.h  vgmplay.c  vgmplay.h  ym3438.c  ym3438.h
synth-emulator/src/rust/: lib.rs  sound.rs  vgmplay.rs
synth-emulator/src/rust/driver/: metadata.rs  vgmplay.rs
synth-emulator/src/rust/pwm/: mod.rs
synth-emulator/src/rust/sn76489/: mod.rs
synth-emulator/src/rust/sound/: pwm.rs  segapcm.rs  sn76489.rs  ym3438.rs
synth-emulator/src/rust/vgmplay/: metadata.rs  mod.rs  vgmplay.rs
synth-emulator/src/rust/ym3438/: mod.rs
synth-emulator/src/sn76489/: mod.rs
synth-emulator/src/vgmplay/: mod.rs
synth-emulator/src/ym3438/: mod.rs
wasm-synth-player/: .eslintrc.js  Cargo.toml  package-lock.json  package.json  webpack.config.js  webpack.dev.js
wasm-synth-player/.cargo/: config  config.toml.not_yet_support_webpack
wasm-synth-player/src/js/: index.js
wasm-synth-player/src/rust/: lib.rs
wasm-synth-player/src/www/: index.html
www/: index.js  package-lock.json  package.json  webpack.config.js
