[package]
name = "wasm-vgm-player"
version = "0.3.0"
authors = ["Hiromasa Tanaka <h1romas4@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
synth-emulator = { path = "../synth-emulator" }
wasm-bindgen = "0.2.55"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[profile.release]
opt-level = "s"
