[package]
name = "chiptune"
version = "0.4.0"
authors = ["Hiromasa Tanaka <h1romas4@gmail.com>"]
edition = "2018"
description = "Chiptune Synthesizer and Player"
license = "GPL-2.0-or-later"
repository = "https://github.com/h1romas4/rust-synth-emulation"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
synth-emulator = { path = "../synth-emulator" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
